--- a/games/phaser/physics02/index.html
+++ b/games/phaser/physics02/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Phaser Template</title>
-    <script src="../../../scripts/phaserjs/phaser.min.js"></script>
+    <script type='text/javascript' src='/node_modules/phaser/dist/phaser.min.js'></script>
 </head>
 <body>
 <div id="game"></div>
